--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint src tests server",
     "lint:fix": "npm run lint -- --fix",
     "start": "better-npm-run start",
+    "postinstall": "npm run deploy:prod",
     "dev": "better-npm-run dev",
     "dev:no-debug": "npm run dev -- --no_debug",
     "test": "better-npm-run test",
@@ -77,6 +78,7 @@
   "author": "David Zukowski <david@zuko.me> (http://zuko.me)",
   "license": "MIT",
   "dependencies": {
+    "aphrodite": "^1.2.3",
     "babel-cli": "^6.5.1",
     "babel-core": "^6.3.17",
     "babel-loader": "^6.2.0",
@@ -88,39 +90,66 @@
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
     "better-npm-run": "0.0.9",
+    "classnames": "^2.2.5",
     "css-loader": "^0.23.0",
     "cssnano": "^3.3.2",
     "debug": "^2.2.0",
+    "email-validator": "^1.1.1",
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.9.0",
+    "form-data": "^2.2.0",
     "fs-extra": "^0.30.0",
     "history": "^2.0.0",
     "html-webpack-plugin": "^2.7.1",
+    "immutable": "^3.8.1",
     "imports-loader": "^0.6.5",
     "ip": "^1.1.2",
     "json-loader": "^0.5.4",
     "koa": "^2.0.0-alpha.3",
     "koa-connect-history-api-fallback": "^0.3.0",
     "koa-convert": "^1.2.0",
+    "koa-gzip": "^0.1.0",
     "koa-proxy": "^0.6.0",
     "koa-static": "^3.0.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "node-sass": "^3.7.0",
     "normalize.css": "^4.1.1",
     "postcss-loader": "^0.9.0",
     "react": "^15.0.0",
-    "react-bootstrap": "^0.31.5",
+    "react-bootstrap": "^0.31.1",
+    "react-bootstrap-carousel": "^1.2.0",
+    "react-bootstrap-date-picker": "^5.0.1",
+    "react-bootstrap-sweetalert": "^3.0.0",
     "react-dom": "^15.0.0",
+    "react-dropzone": "^3.13.4",
+    "react-gmaps": "^1.6.0",
+    "react-grid-gallery": "^0.4.2",
+    "react-images": "^0.5.4",
+    "react-modal-bootstrap": "^1.1.1",
     "react-redux": "^4.0.0",
+    "react-redux-loading-bar": "^2.9.2",
     "react-router": "^2.2.0",
     "react-router-active-component": "^4.0.0",
     "react-router-redux": "^4.0.0",
+    "react-s-alert": "^1.2.2",
+    "react-slick": "^0.14.11",
+    "react-stack-grid": "^0.4.0",
     "redux": "^3.0.0",
+    "redux-api-middleware": "^1.0.3",
+    "redux-auth-wrapper": "^0.9.0",
+    "redux-history-transitions": "^2.2.0",
+    "redux-persist": "^4.8.2",
     "redux-thunk": "^2.0.0",
     "rimraf": "^2.5.1",
     "sass-loader": "^4.0.0",
+    "shuffle-array": "^1.0.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
+    "validator": "^5.7.0",
     "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.6.0",
     "yargs": "^4.0.0"
   },
   "devDependencies": {
@@ -151,8 +180,6 @@
     "react-addons-test-utils": "^15.0.0",
     "redbox-react": "^1.2.10",
     "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.6.0"
+    "sinon-chai": "^2.8.0"
   }
 }
