--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "koa-static": "^3.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "moment-timezone": "^0.5.14",
     "node-sass": "^3.7.0",
     "normalize.css": "^4.1.1",
     "postcss-loader": "^0.9.0",
