--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "fs-extra": "^0.30.0",
     "history": "^2.0.0",
     "html-webpack-plugin": "^2.7.1",
-    "immutable": "^3.8.1",
+    "immutable": "^3.8.2",
     "imports-loader": "^0.6.5",
     "ip": "^1.1.2",
     "json-loader": "^0.5.4",
@@ -124,6 +124,7 @@
     "react-bootstrap-sweetalert": "^3.0.0",
     "react-dom": "^15.0.0",
     "react-dropzone": "^3.13.4",
+    "react-excel-workbook": "0.0.4",
     "react-gmaps": "^1.6.0",
     "react-grid-gallery": "^0.4.2",
     "react-images": "^0.5.4",
