--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "react-modal-bootstrap": "^1.1.1",
     "react-redux": "^4.0.0",
     "react-redux-loading-bar": "^2.9.2",
+    "react-render-html": "^0.6.0",
     "react-router": "^2.2.0",
     "react-router-active-component": "^4.0.0",
     "react-router-redux": "^4.0.0",
