--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "react-select": "^1.1.0",
     "react-slick": "^0.14.11",
     "react-stack-grid": "^0.4.0",
+    "react-table": "^6.7.6",
     "redux": "^3.0.0",
     "redux-api-middleware": "^1.0.3",
     "redux-auth-wrapper": "^0.9.0",
